schools/mdapioutput/objects/Teacher__c.object
<CustomObject>
    <label>Teacher</label>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Discipline_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Discipline ID</label>
        <referenceTo>Discipline__c</referenceTo>
        <relationshipLabel>Teachers (Discipline ID)</relationshipLabel>
        <relationshipName>Teachers1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile_ID</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Second_Name__c</fullName>
        <label>Second Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admission Director</fullName>
                </value>
                <value>
                    <fullName>Athletic Coach</fullName>
                </value>
                <value>
                    <fullName>Autism/Behavior Specialist</fullName>
                </value>
                <value>
                    <fullName>Communication Specialist</fullName>
                </value>
                <value>
                    <fullName>Librarian</fullName>
                </value>
                <value>
                    <fullName>Music Teacher</fullName>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Science Teacher</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>